--- a/microV.ui
+++ b/microV.ui
@@ -14,8 +14,31 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(0, 0, 111);
-color: rgb(255, 243, 197);</string>
+   <string notr="true">*{background-color: rgb(0, 0, 111);
+color: rgb(255, 243, 197);
+}
+/*
+QPushButton:active{
+background-color: rgb(85, 255, 0);
+color:rgb(0, 0, 0);
+}
+*/
+QPushButton:clicked{
+background-color:rgb(255, 38, 38);
+color:rgb(0, 0, 0);
+}
+
+QPushButton:pressed{
+background-color:rgb(255, 38, 38);
+color:rgb(0, 0, 0);
+}
+
+QPushButton:checked{
+background-color:rgb(255, 100, 38);
+color:rgb(0, 0, 0);
+}
+
+</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
