--- a/microV.ui
+++ b/microV.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>688</width>
-    <height>899</height>
+    <width>830</width>
+    <height>669</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -57,7 +57,7 @@ color:rgb(0, 0, 0);
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>5</number>
       </property>
       <widget class="QWidget" name="Laser">
        <attribute name="title">
@@ -178,8 +178,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>224</width>
-             <height>148</height>
+             <width>196</width>
+             <height>113</height>
             </rect>
            </property>
            <attribute name="label">
@@ -237,8 +237,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>290</width>
-             <height>198</height>
+             <width>257</width>
+             <height>155</height>
             </rect>
            </property>
            <attribute name="label">
@@ -335,8 +335,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>353</width>
-             <height>620</height>
+             <width>356</width>
+             <height>425</height>
             </rect>
            </property>
            <attribute name="label">
@@ -407,8 +407,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>280</width>
-             <height>272</height>
+             <width>244</width>
+             <height>201</height>
             </rect>
            </property>
            <attribute name="label">
@@ -580,8 +580,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>312</width>
-             <height>204</height>
+             <width>259</width>
+             <height>152</height>
             </rect>
            </property>
            <attribute name="label">
@@ -693,15 +693,15 @@ color:rgb(0, 0, 0);
            <number>2</number>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>3</number>
           </property>
           <widget class="QWidget" name="CCS200">
            <property name="geometry">
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>353</width>
-             <height>543</height>
+             <width>356</width>
+             <height>594</height>
             </rect>
            </property>
            <attribute name="label">
@@ -765,8 +765,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>186</width>
-             <height>86</height>
+             <width>174</width>
+             <height>70</height>
             </rect>
            </property>
            <attribute name="label">
@@ -807,8 +807,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>174</width>
-             <height>138</height>
+             <width>154</width>
+             <height>109</height>
             </rect>
            </property>
            <attribute name="label">
@@ -881,8 +881,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>353</width>
-             <height>543</height>
+             <width>356</width>
+             <height>416</height>
             </rect>
            </property>
            <attribute name="label">
@@ -1294,6 +1294,23 @@ color:rgb(0, 0, 0);
               </item>
              </layout>
             </item>
+            <item>
+             <widget class="QCheckBox" name="raw_data_preview">
+              <property name="text">
+               <string>preview</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="startCalibr">
+              <property name="text">
+               <string>Calibrate</string>
+              </property>
+              <property name="checkable">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
            </layout>
           </widget>
           <widget class="QWidget" name="Andor">
@@ -1301,8 +1318,8 @@ color:rgb(0, 0, 0);
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>330</width>
-             <height>548</height>
+             <width>285</width>
+             <height>400</height>
             </rect>
            </property>
            <attribute name="label">
@@ -1584,23 +1601,6 @@ color:rgb(0, 0, 0);
          <widget class="Line" name="line">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="raw_data_preview">
-          <property name="text">
-           <string>preview</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="startCalibr">
-          <property name="text">
-           <string>Calibrate</string>
-          </property>
-          <property name="checkable">
-           <bool>true</bool>
           </property>
          </widget>
         </item>
@@ -2748,6 +2748,23 @@ color:rgb(0, 0, 0);
                   </property>
                  </widget>
                 </item>
+                <item row="1" column="3">
+                 <widget class="QDoubleSpinBox" name="confParam_scan_BG">
+                  <property name="maximum">
+                   <double>100.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.500000000000000</double>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="3">
+                 <widget class="QLabel" name="label">
+                  <property name="text">
+                   <string>BG</string>
+                  </property>
+                 </widget>
+                </item>
                </layout>
               </item>
               <item>
@@ -2756,7 +2773,7 @@ color:rgb(0, 0, 0);
                  <string>scan</string>
                 </property>
                 <property name="checkable">
-                 <bool>true</bool>
+                 <bool>false</bool>
                 </property>
                </widget>
               </item>
@@ -3623,17 +3640,11 @@ color:rgb(0, 0, 0);
      </widget>
     </item>
     <item>
-     <widget class="QSplitter" name="view_splitter">
-      <property name="locale">
-       <locale language="C" country="AnyCountry"/>
-      </property>
+     <widget class="QSplitter" name="splitter_3">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
-      <widget class="QSplitter" name="splitter">
-       <property name="locale">
-        <locale language="C" country="AnyCountry"/>
-       </property>
+      <widget class="QSplitter" name="splitter_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -3643,11 +3654,16 @@ color:rgb(0, 0, 0);
         </property>
         <layout class="QGridLayout" name="previewArea"/>
        </widget>
-       <widget class="QWidget" name="verticalLayoutWidget">
-        <property name="locale">
-         <locale language="C" country="AnyCountry"/>
+       <widget class="QSplitter" name="splitter">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
         </property>
-        <layout class="QVBoxLayout" name="plotArea"/>
+        <widget class="QWidget" name="horizontalLayoutWidget_2">
+         <layout class="QHBoxLayout" name="pw_scan"/>
+        </widget>
+        <widget class="QWidget" name="horizontalLayoutWidget_3">
+         <layout class="QHBoxLayout" name="pw_spectra"/>
+        </widget>
        </widget>
       </widget>
       <widget class="QWidget" name="horizontalLayoutWidget">
@@ -3690,8 +3706,8 @@ color:rgb(0, 0, 0);
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>688</width>
-     <height>30</height>
+     <width>830</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -3837,8 +3853,6 @@ color:rgb(0, 0, 0);
   <tabstop>pico_sampleInterval</tabstop>
   <tabstop>pico_samplingDuration</tabstop>
   <tabstop>pico_n_captures</tabstop>
-  <tabstop>raw_data_preview</tabstop>
-  <tabstop>startCalibr</tabstop>
   <tabstop>scan3D_path</tabstop>
   <tabstop>scan3D_path_dialog</tabstop>
   <tabstop>start3DScan</tabstop>
